--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ serde_json = "1.0.143"
 anyhow = "1.0.99"
 chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
+config = "0.15.16"
+strum = { version = "0.27.2", features = ["derive"] }
+
