--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
 config = "0.15.16"
 strum = { version = "0.27.2", features = ["derive"] }
-
+thiserror = "2.0.16"
