--- a/crates/gateway/Cargo.toml
+++ b/crates/gateway/Cargo.toml
@@ -12,8 +12,11 @@ tracing-bunyan-formatter = { workspace = true }
 tracing-log = { workspace = true }
 dotenv = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 config = { workspace = true }
 strum = { workspace = true }
+anyhow = { workspace = true }
+thiserror = { workspace = true }
 
 # local crates 
 common = { path = "../common"}
