--- a/crates/tokenizer/Cargo.toml
+++ b/crates/tokenizer/Cargo.toml
@@ -10,3 +10,7 @@ tiktoken-rs = "0.7.0"
 tokenizers = "0.22.1"
 dashmap = "7.0.0-rc2"
 
+[dev-dependencies]
+tempfile = "3.23.0"
+serial_test = "3.2.0"
+
