--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "1.92.0"
-components = ["clippy", "rustfmt", "rust-src"]
+channel = "stable"
+components = ["rustfmt", "clippy"]
